[package]
name = "turn-proto"
version = "0.1.0"
edition = "2024"

authors = ["dineshadhi <dinesh10c04@gmail.com>"]
readme = "README.md"
description = "Sans-IO TURN library"
repository = "https://github.com/dineshadhi/turn-rs.git"
license = "MIT"
keywords = ["webrtc", "turn"]
categories = ["network-programming"]

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
bytes = "1.10.1"
dashmap = "6.1.0"
md5 = "0.7.0"
props-util = "0.1.3"
rand = "0.9.0"
ring = "0.17.14"
thiserror = "2.0.12"
tracing = "0.1.41"

[dev-dependencies]
hex = "0.4.3"
