[package]
name = "turn-service"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
bytes = "1.10.1"
clippy = "0.0.302"
dashmap = "6.1.0"
futures-util = "0.3.31"
opentelemetry = "0.29.1"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"]}
opentelemetry_sdk = "0.29.0"
props-util = "0.1.3"
rand = "0.9.1"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
turn-proto = { path = "../turn-proto" }
