[package]
name = "turnny-proto"
version = "0.1.0"
edition = "2024"

authors = ["dineshadhi <dinesh10c04@gmail.com>"]
readme = "README.md"
description = "Sans-IO TURN library"
repository = "https://github.com/dineshadhi/turnny-rs.git"
license = "MIT"
keywords = ["webrtc", "turn"]
categories = ["network-programming"]

[dependencies]
props-util = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
prost =  "0.13.5"
md5 = "0.7.0"
ring = "0.17.14"

[dev-dependencies]
hex = "0.4.3"

[build-dependencies]
prost-build = "0.13.5"
