[package]
name = "turnny-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
bytes = "1.10.1"
dashmap = "6.1.0"
futures-util = "0.3.31"
metrics = "0.24.2"
opentelemetry = "0.29.1"
props-util = { workspace = true }
rand = "0.9.1"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
turnny-proto = { path = "../turnny-proto" }
