[package]
name = "turnny"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
props-util = { workspace = true }
tokio = { workspace = true }
opentelemetry = "0.29.1"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"]}
opentelemetry_sdk = "0.29.0"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
clap = { version = "4.5.37", features = ["derive"] }
# From filesystem
turnny-service = { path = "../turnny-service" }
